--- a/pruebas/desafio4/productos.html
+++ b/pruebas/desafio4/productos.html
@@ -48,48 +48,17 @@
         </header>   
         <main>
         <!-- Cards de productos -->
-            <div class="card-group">
-                <div class="card m-5 ">
-                    <img src="./media/splash.webp" class="card-img-top mb-5" alt="áuricos">
-                    <div class="card-body">
-                        <h4 class="card-title mb-5">Áuricos</h4>
-                        <p class="card-text mb-5">Transforman y elevan la frecuencia vibratoria de nuestro espacio personal. Limpieza energética de ambientes.</p>
-                        <h5 class="card-title mb-5">Modo de uso</h5>
-                        <p class="card-text mb-5">Agitar antes de usar. Rociar el ambiente y alrededor del cuerpo sin aplicar directamente sobre la piel.</p>
-                        <a href="contacto.html" class="button__black">Pedí el tuyo!</a>
-                    </div>    
-                </div>
-                <div class="card m-5">
-                    <img src="./media/jabon.webp" class="card-img-top mb-5" alt="jabones">
-                    <div class="card-body">
-                        <h4 class="card-title mb-5">Jabones</h4>
-                        <p class="card-text mb-5">Revitalizan, limpian el cuerpo y dejan la piel más tersa.</p>
-                        <h5 class="card-title mb-5">Modo de uso</h5>
-                        <p class="card-text mb-5">Aplicar suavemente sobre la piel. Es recomendable usar agua tibia.</p>
-                        <a href="contacto.html" class="button__white">Pedí el tuyo!</a>
-                    </div>    
-                </div>   
-                <div class="card m-5">
-                    <img src="./media/rollon.webp" class="card-img-top mb-5" alt="rollon">
-                    <div class="card-body">
-                        <h4 class="card-title mb-5">Roll-on</h4>
-                        <p class="card-text mb-5">Aprovecha los beneficios de la aromaterapia de manera fácil y rápida. Inciden sobre el sistema nervioso.</p>
-                        <h5 class="card-title mb-5">Modo de uso</h5>
-                        <p class="card-text mb-5">Aplicar en sienes, muñecas, palma de las manos o pies según se necesite.</p>
-                        <a href="contacto.html" class="button__black">Pedí el tuyo!</a>
-                    </div>    
-                </div>
-                <div class="card m-5">
-                    <img src="./media/crema.webp" class="card-img-top mb-5" alt="cremas">
-                    <div class="card-body">
-                        <h4 class="card-title mb-5">Cremas</h4>
-                        <p class="card-text mb-5">Penetran de forma directa en la piel para aprovechar los distintos componentes y tratar alteraciones.</p>
-                        <h5 class="card-title mb-5">Modo de uso</h5>
-                        <p class="card-text mb-5">Aplicar sobre la piel con suaves masajes circulares.</p>
-                        <a href="contacto.html" class="button__white">Pedí el tuyo!</a>
-                    </div>    
-                </div>
-            </div>     
+        <div class="row row-cols-lg-4">
+            <div clas="card-deck"  >
+                <section class="products"></section>       
+            </div>
+        </div>
+
+        <div class="row row-cols-lg-4">
+            <div class="card-deck">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
+                <section class="cart"></section>  
+            </div>
+        </div>
         </main>
         <footer>
             <div class="container-fluid ">
